Use Spring to manage gRPC and REST endpoints